[gd_scene load_steps=2 format=2]

[ext_resource path="res://ScanGUI.gd" type="Script" id=1]

[node name="ScanGUI" type="Control"]
anchor_left = 0.5
anchor_top = 0.3
anchor_right = 0.5
anchor_bottom = 0.3
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Scan" type="HBoxContainer" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -20.0
margin_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScanText" type="Label" parent="Scan"]
margin_top = 18.0
margin_right = 50.0
margin_bottom = 32.0
grow_vertical = 2
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Scan for"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Time" type="LineEdit" parent="Scan"]
margin_left = 54.0
margin_top = 13.0
margin_right = 88.0
margin_bottom = 37.0
grow_vertical = 2
rect_min_size = Vector2( 34, 24 )
size_flags_horizontal = 8
size_flags_vertical = 4
custom_constants/minimum_spaces = 0
text = "10"
max_length = 3
editable = false
shortcut_keys_enabled = false
selecting_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Secs" type="Label" parent="Scan"]
margin_left = 92.0
margin_top = 18.0
margin_right = 125.0
margin_bottom = 32.0
grow_vertical = 2
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "secs."
valign = 1

[node name="ScanButton" type="Button" parent="Scan"]
margin_left = 129.0
margin_top = 15.0
margin_right = 157.0
margin_bottom = 35.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 4
size_flags_stretch_ratio = 0.0
disabled = true
shortcut_in_tooltip = false
action_mode = 0
button_mask = 3
text = ">>"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Placeholder" type="ColorRect" parent="Scan"]
visible = false
margin_left = 161.0
margin_top = 15.0
margin_right = 181.0
margin_bottom = 35.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 20, 20 )
size_flags_horizontal = 4
size_flags_vertical = 4
color = Color( 1, 1, 1, 0 )

[node name="Warn" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.3
anchor_right = 0.5
anchor_bottom = 0.3
margin_left = -60.0
margin_top = -17.0
margin_right = 98.0
margin_bottom = -5.0
grow_horizontal = 2
grow_vertical = 0
rect_scale = Vector2( 0.7, 0.7 )
custom_colors/font_color = Color( 0.572549, 0.572549, 0.572549, 1 )
text = "Accepted values: 1 - 300"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Scan/ScanButton" to="." method="_on_button_press"]
